--- a/client/src/pages/AboutPage.css
+++ b/client/src/pages/AboutPage.css
@@ -1,6 +1,6 @@
 /* About Page Styles */
 .about-page {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: inherit;
   line-height: 1.6;
   color: #333;
   background-color: #ffffff;
