--- a/client/src/components/ContactPage/ContactForm/ContactForm.css
+++ b/client/src/components/ContactPage/ContactForm/ContactForm.css
@@ -57,7 +57,7 @@
 }
 
 .btn.btn-primary {
-  background: linear-gradient(135deg, #1a75c4 0%, #ff9219 100%);
+  background: linear-gradient(135deg, #1a75c4);
   color: white;
   padding: 1rem 2rem;
   border: none;
